Added saving Scoreboard to database.